--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,30 @@
-<p>usuario works!</p>
+<div class="alert alert-info text-center" role="alert" *ngIf="loading">
+    <h4 class="alert-heading">Cargando</h4>
+    <p>
+      <i class="fa fa-sync fa-spin fa-2x"></i>
+    </p>
+    <p class="mb-0"></p>
+  </div>
+  
+  <div class="alert alert-danger text-center" role="alert" *ngIf="error">
+    <h4 class="alert-heading">Error</h4>
+    <pre>
+      {{ error | json }}
+    </pre>
+    <p class="mb-0"></p>
+  </div>
+
+
+<div class="row" *ngIf="!loading">
+    <div class="col-4">
+        <img [src]="usuario?.avatar" alt="avatar" class="img-thumbnail">
+    </div>
+
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item"> <b>Nombre:</b> {{ usuario?.first_name }}</li>
+            <li class="list-group-item"> <b>Apellidos:</b> {{ usuario?.last_name }}</li>
+
+        </ul>
+    </div>
+</div>
